2020-06-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  isPort: Implement RFE #679 via patch #372 by Basil Hussain.

2020-06-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/pdk/gen.c,
	  src/stm8/gen.c,
	  support/regression/tests/bug-3043.c,
	  support/valdiag/tests/bug-3043.c:
	  Fix bug #3043.

2020-06-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c:
	  Fix bug #3033.

2020-06-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCloop.c (basicInduction): Fix bug #3022

2020-06-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Disable use of z80n push nn until bug #3032 is fixed.
	* device/lib/ez80_z80/README,
	  device/lib/ez80_z80/crt0.s,
	  device/lib/ez80_z80/setjmp.s,
	  device/lib/z180/crt0.s,
	  device/lib/z80/crt0.s:
	  eZ80 setjmp/longjmp improvement, patch by b-s-a.
	  
2020-06-08 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/ucz80n,
	  support/regression/Makefile.in,
	  support/regression/fwk/include/testfwk.h:
	  z80n regression testing infrastructure.
	* device/include/stdatomic.h,
	  device/lib/atomic_flag_clear.c,
	  device/lib/z80n/Makefile.in:
	  atomic_flag for z80n.
	* src/SDCCglue.c:
	  Fix __sfr handling for z80n.
	* src/z80/gen.c:
	  Fix z80n immediate push, use pop / push for z80n like for z80.

2020-06-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCopt.c (optimizeOpWidth),
	  src/SDCCloop.c (loopInduction): Fix bug #3027
	* support/regression/tests/bug-3027: Add test

2020-06-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  src/z80/peeph-gbz80.def:
	  Improve z80 peephole functions, patch by Baŝto.
	* device/include/mcs51/stc89.h:
	  STC89 header, patch by Diego Elio Pettenò.

2020-06-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genAddrOf): Make better use of HX

2020-06-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,